--- a/frontend/src/scss/_product-cta.scss
+++ b/frontend/src/scss/_product-cta.scss
@@ -7,7 +7,7 @@
   display: grid;
   grid-template-columns: 1.5fr 1fr;
   padding: 3rem;
-  background-image: linear-gradient(to right, #154973, #292631);
+  background-image: linear-gradient(to right, #0c2b42, #292631);
   border-radius: 5px;
 
   @include md {
