--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -27,6 +27,7 @@
 @import "./user-dashboard-my-courses";
 @import "./user-dashboard-profile";
 @import "./user-dashboard-notice";
+@import "./footer";
 
 .ant-breadcrumb {
   font-size: 2rem;
