--- a/frontend/src/scss/_user-dashboard-profile.scss
+++ b/frontend/src/scss/_user-dashboard-profile.scss
@@ -2,7 +2,9 @@
   display: grid;
   grid-template-rows: 1fr 3fr;
   box-shadow: 0px 0px 8px 0px #cabfbf;
-    margin: 3rem;
+  margin: 3rem;
+  background-color: white;
+  padding-top: 3rem;
   &__top {
     display: flex;
     justify-content: center;
