--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -632,7 +632,7 @@ body {
   display: grid;
   grid-template-columns: 1.5fr 1fr;
   padding: 3rem;
-  background-image: linear-gradient(to right, #154973, #292631);
+  background-image: linear-gradient(to right, #0c2b42, #292631);
   border-radius: 5px; }
   @media (max-width: 768px) {
     .product-cta {
@@ -1365,7 +1365,11 @@ body {
 
 .profile {
   display: grid;
-  grid-template-rows: 1fr 3fr; }
+  grid-template-rows: 1fr 3fr;
+  box-shadow: 0px 0px 8px 0px #cabfbf;
+  margin: 3rem;
+  background-color: white;
+  padding-top: 3rem; }
   .profile__top {
     display: flex;
     justify-content: center;
@@ -1408,6 +1412,23 @@ body {
   border-radius: 1rem;
   color: #077e7f;
   font-family: sans-serif; }
+
+.footer {
+  min-height: 40rem;
+  background-color: #272727;
+  display: grid;
+  color: white; }
+  .footer__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 2rem;
+    justify-items: center; }
+    .footer__container--item {
+      padding-left: 2rem;
+      padding-top: 3rem; }
+      .footer__container--item-text {
+        font-size: 1.5rem;
+        list-style: none; }
 
 .ant-breadcrumb {
   font-size: 2rem;
